hphp/hack/test/typecheck/uninstantiable_anon_return4.php.exp
File "uninstantiable_anon_return4.php", line 11, characters 12-12:
T is uninstantiable (Typing[4002])
File "uninstantiable_anon_return4.php", line 4, characters 7-7:
Declaration is here
