hphp/hack/test/typecheck/uninstantiable_anon_return4.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

trait T {}

class C {
  use T;
}

function foo(): void {
  $_ = (): T ==> new C();
}
